--- a/loveMe/index.html
+++ b/loveMe/index.html
@@ -19,6 +19,7 @@ I love <strong>dragons </strong> and other <em> sweet stuff </em>like, <strong> 
 		<li> <strong>Email: </strong></li>
 		<li> <strong>GitHub: </strong></li>
 		<li> <strong>Portfolio:</strong></li>
+		<li>   trsut me </li> 
 
 	</ul>
 	</body>
